--- a/frontend/src/styles/EnvironmentSynthesis.css
+++ b/frontend/src/styles/EnvironmentSynthesis.css
@@ -1,9 +1,27 @@
+.environment-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .main-synthesis {
   margin: 1rem;
-  width: 40ch;
+  width: 37ch;
   border: 1px solid var(--color-black);
   border-radius: 10px;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
+}
+
+.orange-button {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin: 0;
+  border: 1px solid var(--color-highlight);
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
