Added support for weather icon in the synthesis card

--- a/frontend/src/styles/EnvironmentSynthesis.css
+++ b/frontend/src/styles/EnvironmentSynthesis.css
@@ -12,6 +12,7 @@
   padding: 1rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .orange-button {
@@ -23,5 +24,11 @@
   background-color: white;
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.weather {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
