--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -19,9 +19,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font: inherit;
+  /* font: inherit; */
   scroll-behavior: smooth;
-  font-family: var(--font-paragraph);
+  /* font-family: var(--font-paragraph); */
 }
 a {
   text-decoration: none;
